# spew

./: .gitignore  LICENSE  README.md  app.py  example.py  pyproject.toml  pytest.ini
.github/workflows/: azure-static-web-apps-kind-dune-0f668560f.yml  python-package.yml
api/: function.json  function.py
examples/: output.py  output2.py  output3.py  output4.py  output5.py  output6.py  output_312rc2.py  output_deep_narrow.py  output_default.py  output_gen.py  output_revised_nesting.py
src/spew/: __init__.py  __main__.py  generate.py  names.py  randomcycle.py
tests/: test_generate.py  test_module.py
