[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spew"
authors = [{name = "Anthony Shaw"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = ["rich"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-repeat",
]

